Fix scrollbars appearing really bright in some browsers

--- a/src/dashboard/styles/dashboard-common.scss
+++ b/src/dashboard/styles/dashboard-common.scss
@@ -7,6 +7,8 @@
 body {
     margin: 8px;
     font-family: 'Roboto', sans-serif;
+    color-scheme: dark;
+    scrollbar-color: rgba(255, 255, 255, 0.33) rgba(255, 255, 255, 0.04);
 }
 
 .title {
